# ptb-menu-pagination

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
example/: search_bot.py
example/fixtures/: data.txt
paginator/: __init__.py  consts.py  main.py
paginator/composers/: map.py  menu.py
tests/: test_paginator_get_menu.py
tests/fixtures/: fixtures.py
